--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mainFooterr {
+    position: fixed;
+    bottom: 0;
+    z-index:99;
+    width: 100%;
+    white-space: nowrap;
+    padding: 7px 7px 7px 15px;
+    font-size: 14px;
+    background-color: rgb(242, 242, 242);
+  }
