--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,12 +3,32 @@
 @tailwind utilities;
 
 .mainFooterr {
-    position: fixed;
-    bottom: 0;
-    z-index:99;
-    width: 100%;
-    white-space: nowrap;
-    padding: 7px 7px 7px 15px;
-    font-size: 14px;
-    background-color: rgb(242, 242, 242);
+  position: fixed;
+  bottom: 0;
+  z-index: 99;
+  width: 100%;
+  white-space: nowrap;
+  padding: 7px 7px 7px 15px;
+  font-size: 14px;
+  background-color: rgb(242, 242, 242);
+}
+
+.sms-loader {
+  width: 14px;
+  height: 14px;
+  border: 2px solid #fff;
+  border-bottom-color: #78e0ee;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
